Bug 154050 - Crashes when inserting or changing a note in Calc With Standard Toolbar (Single Mode) enabled
Summary: Crashes when inserting or changing a note in Calc With Standard Toolbar (Sing...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.1.2 release
Hardware: All All
: high critical
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
: 153327 154146 (view as bug list)
Depends on:
Blocks: Calc-Comments Calc-Toolbars
  Show dependency treegraph
 
Reported: 2023-03-07 22:11 UTC by Rafael Da
Modified: 2023-03-12 22:43 UTC (History)
8 users (show)

See Also:
Crash report or crash signature: https://crashreport.libreoffice.org/stats/crash_details/db80188d-530d-4879-b954-cb7c101f25fb


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Da 2023-03-07 22:11:26 UTC
Description:
LibreOffice crashes when inserting or changing a note in Calc. It can be reproduced with a new Calc document.

Steps to Reproduce:
1.Open a new Calc document
2.Insert a note in a cell
3.Click outside the note
4.Crash

Actual Results:
Crash

Expected Results:
The note should continue there, I should be able to edit it without LibreOffice crashing.


Reproducible: Always


User Profile Reset: No

Additional Info:
https://crashreport.libreoffice.org/stats/crash_details/adf1391a-2e6c-4e00-b3f2-ecf513d385dd

Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 64; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: pt-BR (pt_BR); UI: pt-BR
Calc: threaded
Comment 1 Rafael Da 2023-03-07 22:14:35 UTC
It also happens when editing a note in an already existing Calc document.
Steps to Reproduce:
1.Open an existing Calc document
2.Right click one a cell that contains a note.
3 Chose "Edit Note" in the menu
3.Click outside the note
4.Crash
Comment 2 Rafael Da 2023-03-07 23:23:32 UTC
https://crashreport.libreoffice.org/stats/crash_details/b48f02cc-7dd2-4d35-bbec-941271f83e30
I cleaned the Profile and the bug dissapeared.
Then I started to configure LibreOffice the way I like it again and, after I enabled the "Standard Toolbar (Single Mode)", the bug reapeared.

So steps to replicate the bug:

1 - New instalation of LibreOffice (or clean profile)
2 - Open Calc
3 - In the "view menu" enable the "Standard Toolbar (Single Mode)".
4 - Right-click on a cell
5 - Chose to insert a note
6 - Click outside the note
7 - Crash!
Comment 3 m.a.riosv 2023-03-08 02:02:52 UTC
Reproducible.
Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
and
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 687b950702c49c90cff9a43655ea97a0343799a0
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

regression from
Version: 7.4.6.1 (x64) / LibreOffice Community
Build ID: cf1691909b7b17c5e258d2635cae0072cf471be7
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: threaded
Comment 4 Xisco Faulí 2023-03-08 09:36:20 UTC
Regression introduced by:

author	Maxim Monastirsky <momonasmon@gmail.com>	2022-06-16 01:07:31 +0300
committer	Maxim Monastirsky <momonasmon@gmail.com>	2022-06-16 14:00:12 +0200
commit 48ca2336251d62ac2e90300cd9945fb84b1cddd8 (patch)
tree 6389c48001d96114ed6c00d21dc775a29ecf13dd
parent 970f03cb9ed68d249fe04cff7d4aa15b0f2c6c35 (diff)
tdf#125040 Avoid flickering on context change

Bisected with: bibisect-linux64-7.5

Adding Cc: to Maxim Monastirsky
Comment 5 Commit Notification 2023-03-09 07:23:51 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37b2bb1f6c18b915286264682bf0b3c25f0d552a

tdf#154050 Unset external pointer before destroying

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-03-09 10:02:15 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/25dd1b089fedec1a7ba45f3a3be7d10217165106

tdf#154050 Unset external pointer before destroying

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Maxim Monastirsky 2023-03-12 18:06:47 UTC
*** Bug 153327 has been marked as a duplicate of this bug. ***
Comment 8 Stéphane Guillou (stragu) 2023-03-12 22:43:36 UTC
*** Bug 154146 has been marked as a duplicate of this bug. ***