tdf#154050 Unset external pointer before destroying

Regression of 48ca2336251d62ac2e90300cd9945fb84b1cddd8
("tdf#125040 Avoid flickering on context change").
Before that commit the state of toolbar commands was
updating async, which is how it managed to not crash.

Change-Id: I07e2ce25faf848c7db33dd029b54a98bafcf8fa9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148518
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit 37b2bb1f6c18b915286264682bf0b3c25f0d552a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148501
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>